--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -2,27 +2,27 @@
 <interface>
   <requires lib="gtk+" version="4.0"/>
   <template class="EditorLanguageDialog" parent="GtkWindow">
-    <style>
-      <class name="org-gnome-TextEditor"/>
-      <class name="preferences"/>
-    </style>
     <property name="title" translatable="yes">Highlight Mode</property>
     <child>
       <object class="GtkBox">
         <property name="orientation">vertical</property>
         <child>
-          <object class="GtkBox">
-            <property name="orientation">horizontal</property>
-            <child>
-              <object class="GtkEntry" id="search_entry">
-                <property name="primary-icon-name">edit-find-symbolic</property>
+          <object class="GtkSearchBar">
+            <property name="search-mode-enabled">True</property>
+            <property name="child">
+              <object class="AdwClamp">
                 <property name="hexpand">true</property>
-                <property name="margin-end">40</property>
-                <property name="margin-start">40</property>
-                <property name="margin-top">10</property>
-                <property name="margin-bottom">10</property>
+                <property name="margin-end">30</property>
+                <property name="margin-start">30</property>
+                <property name="margin-top">6</property>
+                <property name="margin-bottom">6</property>
+                <property name="child">
+                  <object class="GtkEntry" id="search_entry">
+                    <property name="primary-icon-name">edit-find-symbolic</property>
+                  </object>
+                </property>
               </object>
-            </child>
+            </property>
           </object>
         </child>
         <child>
@@ -30,15 +30,18 @@
             <property name="vexpand">true</property>
             <property name="hscrollbar-policy">never</property>
             <child>
-              <object class="GtkFrame">
-                <property name="margin-start">40</property>
-                <property name="margin-end">40</property>
-                <property name="margin-top">10</property>
-                <property name="margin-bottom">40</property>
-                <child>
+              <object class="AdwClamp">
+                <property name="margin-start">42</property>
+                <property name="margin-end">42</property>
+                <property name="margin-top">12</property>
+                <property name="margin-bottom">42</property>
+                <property name="child">
                   <object class="GtkListBox" id="list_box">
+                    <style>
+                      <class name="content"/>
+                    </style>
                   </object>
-                </child>
+                </property>
               </object>
             </child>
           </object>
