--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -3,6 +3,9 @@
   <requires lib="gtk+" version="4.0"/>
   <template class="EditorLanguageDialog" parent="GtkWindow">
     <property name="title" translatable="yes">Highlight Mode</property>
+    <child type="titlebar">
+      <object class="GtkHeaderBar"/>
+    </child>
     <child>
       <object class="GtkBox">
         <property name="orientation">vertical</property>
