--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -55,8 +55,25 @@
             <property name="spacing">6</property>
             <child>
               <object class="GtkToggleButton" id="open_toggle_button">
-                <property name="label" translatable="yes">Open</property>
                 <signal name="toggled" handler="editor_window_sidebar_toggled_cb" swapped="true" object="EditorWindow"/>
+                <child>
+                  <object class="GtkBox">
+                    <property name="margin-start">3</property>
+                    <property name="margin-end">3</property>
+                    <property name="orientation">horizontal</property>
+                    <property name="spacing">3</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="label" translatable="yes">Open</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkImage">
+                        <property name="icon-name">pan-down-symbolic</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
               </object>
             </child>
             <child>
