window: add theme selector buttons in menu
This changes from dark-mode (bool) to a style-variant (string) that we
can more easily add to in the future if we end up doing Sepia modes. It
also sets the groundwork for the new selector in the Text Editor mockups
where you can choose light or dark with buttons that look like text
examples.

We still need the icons to set -gtk-icon-source in the CSS, but this gets
the machinery in place.

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -29,6 +29,27 @@
 }
 
 
+/* EditorThemeSelector */
+
+.org-gnome-TextEditor checkbutton.theme-selector radio {
+  -gtk-icon-source: none;
+  background: none;
+  box-shadow: none;
+  min-height: 48px;
+  min-width: 48px;
+}
+.org-gnome-TextEditor checkbutton.theme-selector radio:checked {
+  border: 3px solid @theme_selected_bg_color;
+}
+.org-gnome-TextEditor checkbutton.theme-selector.light radio {
+  /* TODO: Use icons once they're ready */
+  background-color: #fff;
+}
+.org-gnome-TextEditor checkbutton.theme-selector.dark radio {
+  background-color: #2e3436;
+}
+
+
 /* FIXME: Work around GTK :focus propagation issue */
 notebook:focus,
 notebook:focus:backdrop {
