--- a/src/editor-theme-selector.ui
+++ b/src/editor-theme-selector.ui
@@ -15,6 +15,7 @@
             <property name="can-focus">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'light'</property>
+            <property name="tooltip-text" translatable="yes">Toggle light mode</property>
           </object>
         </child>
         <child>
@@ -26,6 +27,7 @@
             <property name="can-focus">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'dark'</property>
+            <property name="tooltip-text" translatable="yes">Toggle dark mode</property>
           </object>
         </child>
       </object>
