theme-selector: simplify tooltip text

--- a/src/editor-theme-selector.ui
+++ b/src/editor-theme-selector.ui
@@ -15,7 +15,7 @@
             <property name="can-focus">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'light'</property>
-            <property name="tooltip-text" translatable="yes">Toggle light mode</property>
+            <property name="tooltip-text" translatable="yes">Light style</property>
           </object>
         </child>
         <child>
@@ -27,7 +27,7 @@
             <property name="can-focus">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'dark'</property>
-            <property name="tooltip-text" translatable="yes">Toggle dark mode</property>
+            <property name="tooltip-text" translatable="yes">Dark style</property>
           </object>
         </child>
       </object>
