--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -35,17 +35,23 @@
   -gtk-icon-source: none;
   background: none;
   box-shadow: none;
-  min-height: 48px;
-  min-width: 48px;
+  padding: 16px;
+  min-height: 24px;
+  min-width: 24px;
+  border-width: 3px;
+  border-style: solid;
+  border-color: transparent;
 }
 .org-gnome-TextEditor checkbutton.theme-selector radio:checked {
-  border: 3px solid @theme_selected_bg_color;
+  border-color: @theme_selected_bg_color;
+  -gtk-icon-source: -gtk-scaled(-gtk-icontheme("object-select-symbolic"));
 }
 .org-gnome-TextEditor checkbutton.theme-selector.light radio {
-  /* TODO: Use icons once they're ready */
+  color: #2e3436;
   background-color: #fff;
 }
 .org-gnome-TextEditor checkbutton.theme-selector.dark radio {
+  color: #fff;
   background-color: #2e3436;
 }
 
