--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -28,6 +28,9 @@
   font-feature-settings: "tnum";
 }
 
+.org-gnome-TextEditor .empty-state image.dim-label { color: alpha(@theme_fg_color, 0.5); }
+.org-gnome-TextEditor .empty-state image:backdrop.dim-label { color: alpha(@theme_unfocused_fg_color, 0.5); }
+
 
 /* EditorThemeSelector */
 
