--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -175,15 +175,17 @@
                 </child>
                 <child>
                   <object class="GtkLabel">
-                    <property name="halign">start</property>
                     <property name="label" translatable="yes">Start or Open a Document</property>
                     <property name="margin-bottom">16</property>
+                    <property name="wrap">True</property>
+                    <property name="wrap-mode">word-char</property>
+                    <property name="justify">center</property>
                     <style>
-                      <class name="dim-label"/>
+                      <class name="title"/>
                     </style>
                     <attributes>
                       <attribute name="weight" value="bold"/>
-                      <attribute name="scale" value="1.4"/>
+                      <attribute name="scale" value="1.8"/>
                     </attributes>
                   </object>
                 </child>
