theme-selector: fix group for check button

--- a/src/editor-theme-selector.ui
+++ b/src/editor-theme-selector.ui
@@ -24,6 +24,7 @@
               <class name="theme-selector"/>
               <class name="dark"/>
             </style>
+            <property name="group">light</property>
             <property name="can-focus">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'dark'</property>
