window: use popover instead of sidebar
This suffles some things around to allow for a popover instead of
a sidebar for the recent items, including search and browse.

Session will return a Page for various operations which might be
useful going forward.

A recents model is now part of the session, making it easier to
bind to the listview.

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -70,14 +70,10 @@ notebook:focus:backdrop {
 
 /* EditorSidebar */
 
-.org-gnome-TextEditor sidebar,
-.org-gnome-TextEditor sidebar list {
-  background: transparent;
-}
-.org-gnome-TextEditor sidebar list row {
+.org-gnome-TextEditor .open-popover listview row {
   border-bottom: 1px solid alpha(@borders, 0.4);
 }
-.org-gnome-TextEditor sidebar list row:last-child {
+.org-gnome-TextEditor .open-popover listview row:last-child {
   border-bottom: 1px solid transparent;
 }
 
