--- a/src/editor-sidebar-row.ui
+++ b/src/editor-sidebar-row.ui
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="4.0"/>
-  <template class="EditorSidebarRow" parent="GtkListBoxRow">
-    <property name="selectable">false</property>
+  <template class="EditorSidebarRow" parent="GtkWidget">
     <child>
-      <object class="GtkGrid">
+      <object class="GtkGrid" id="grid">
         <property name="visible">true</property>
         <property name="margin-top">3</property>
-        <property name="margin-start">6</property>
+        <property name="margin-start">0</property>
         <property name="margin-end">6</property>
         <property name="margin-bottom">3</property>
         <property name="row-spacing">3</property>
@@ -52,9 +51,32 @@
             <style>
               <class name="dim-label"/>
             </style>
+            <attributes>
+              <attribute name="scale" value="0.8333"/>
+            </attributes>
             <layout>
               <property name="row">1</property>
               <property name="column">1</property>
+              <property name="column-span">2</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="GtkLabel" id="recency">
+            <property name="label">2 hours ago</property>
+            <property name="margin-start">12</property>
+            <property name="visible">true</property>
+            <property name="valign">center</property>
+            <property name="halign">end</property>
+            <attributes>
+              <attribute name="scale" value="0.8333"/>
+            </attributes>
+            <style>
+              <class name="dim-label"/>
+            </style>
+            <layout>
+              <property name="column">2</property>
+              <property name="row">0</property>
             </layout>
           </object>
         </child>
