--- a/src/editor-tab.ui
+++ b/src/editor-tab.ui
@@ -36,6 +36,9 @@
             <property name="hexpand">false</property>
             <property name="width-chars">5</property>
             <property name="ellipsize">middle</property>
+            <attributes>
+              <attribute name="weight" value="bold"/>
+            </attributes>
           </object>
         </child>
         <child type="end">
