--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -6,49 +6,7 @@
       <object class="GtkBox" id="box">
         <property name="orientation">vertical</property>
         <child>
-          <object class="GtkInfoBar" id="changed_infobar">
-            <property name="message-type">warning</property>
-            <property name="revealed">false</property>
-            <property name="show-close-button">true</property>
-            <property name="visible">false</property>
-            <child>
-              <object class="GtkBox">
-                <property name="orientation">vertical</property>
-                <property name="spacing">3</property>
-                <property name="hexpand">true</property>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="label" translatable="yes">File Has Changed on Disk</property>
-                    <property name="xalign">0.0</property>
-                    <attributes>
-                      <attribute name="weight" value="bold"/>
-                    </attributes>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="label" translatable="yes">The file has been changed by another program.</property>
-                    <property name="xalign">0.0</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child type="action">
-              <object class="GtkBox">
-                <property name="hexpand">false</property>
-                <property name="halign">end</property>
-                <property name="valign">center</property>
-                <child>
-                  <object class="GtkButton" id="reload_button">
-                    <property name="use-underline">true</property>
-                    <property name="label" translatable="yes">Discard Changes and _Reload</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <action-widgets>
-              <action-widget response="accept">reload_button</action-widget>
-            </action-widgets>
+          <object class="EditorInfoBar" id="infobar">
           </object>
         </child>
         <child>
