sidebar: import age label

--- a/src/editor-sidebar-row.ui
+++ b/src/editor-sidebar-row.ui
@@ -62,7 +62,7 @@
           </object>
         </child>
         <child>
-          <object class="GtkLabel" id="recency">
+          <object class="GtkLabel" id="age">
             <property name="label">2 hours ago</property>
             <property name="margin-start">12</property>
             <property name="visible">true</property>
