open-popover: add button to remove recent row
It could be annoying to not be able to remove these, so try to remove the
row if the user requests it.

--- a/src/editor-sidebar-row.ui
+++ b/src/editor-sidebar-row.ui
@@ -80,6 +80,23 @@
             </layout>
           </object>
         </child>
+        <child>
+          <object class="GtkButton" id="remove">
+            <property name="action-name">row.remove</property>
+            <property name="visible">true</property>
+            <property name="valign">center</property>
+            <property name="halign">end</property>
+            <property name="icon-name">window-close-symbolic</property>
+            <style>
+              <class name="circular"/>
+              <class name="flat"/>
+            </style>
+            <layout>
+              <property name="column">2</property>
+              <property name="row">1</property>
+            </layout>
+          </object>
+        </child>
       </object>
     </child>
   </template>
