--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -80,6 +80,14 @@ notebook:focus:backdrop {
 .org-gnome-TextEditor .open-popover listview row:last-child {
   border-bottom: 1px solid transparent;
 }
+.org-gnome-TextEditor .open-popover listview row:not(:hover) button {
+  opacity: 0;
+}
+.org-gnome-TextEditor .open-popover listview row button {
+  margin: 0px;
+  min-width: 16px;
+  min-height: 16px;
+}
 
 
 /* EditorSearchBar */
