map: add hidden feature for overview map
This allows toggling the GtkSourceMap from a GSettings key. When enabled,
we use a GtkSourceMap instead of a scrollbar.

I should note that on some systems, I see issues with disappearing text
which is probably pointing to a bug in the GL renderer or GtkTextLayout.

Either way, this is off by default and according to designs we do not
display an optnio for it in preferences.

--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -13,15 +13,32 @@
           <object class="GtkOverlay" id="overlay">
             <property name="vexpand">true</property>
             <child>
-              <object class="GtkScrolledWindow" id="scroller">
+              <object class="GtkBox">
+                <property name="orientation">horizontal</property>
                 <child>
-                  <object class="GtkSourceView" id="view">
-                    <property name="auto-indent">true</property>
-                    <property name="top-margin">16</property>
-                    <property name="bottom-margin">16</property>
-                    <property name="left-margin">16</property>
-                    <property name="right-margin">16</property>
-                    <property name="monospace">true</property>
+                  <object class="GtkScrolledWindow" id="scroller">
+                    <property name="hexpand">true</property>
+                    <property name="vexpand">true</property>
+                    <child>
+                      <object class="GtkSourceView" id="view">
+                        <style>
+                          <class name="editor"/>
+                        </style>
+                        <property name="auto-indent">true</property>
+                        <property name="top-margin">16</property>
+                        <property name="bottom-margin">16</property>
+                        <property name="left-margin">16</property>
+                        <property name="right-margin">16</property>
+                        <property name="monospace">true</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkSourceMap" id="map">
+                    <property name="hexpand">false</property>
+                    <property name="visible">false</property>
+                    <property name="view">view</property>
                   </object>
                 </child>
               </object>
