--- a/src/menus.ui
+++ b/src/menus.ui
@@ -12,6 +12,18 @@
         <attribute name="action">app.new-window</attribute>
         <attribute name="accel">&lt;primary&gt;n</attribute>
       </item>
+      <item>
+        <attribute name="label" translatable="yes">New _Tab</attribute>
+        <attribute name="action">session.new-draft</attribute>
+        <attribute name="accel">&lt;primary&gt;t</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
+        <attribute name="label" translatable="yes">_Close Tab</attribute>
+        <attribute name="action">win.close-current-page</attribute>
+        <attribute name="accel">&lt;primary&gt;w</attribute>
+      </item>
     </section>
     <section>
       <item>
