window: make tooltip match menu entry

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -71,7 +71,7 @@
                     <property name="action-name">session.new-draft</property>
                     <property name="icon-name">tab-new-symbolic</property>
                     <property name="has-tooltip">true</property>
-                    <property name="tooltip-text" translatable="yes">Create new document in tab (Ctrl+T)</property>
+                    <property name="tooltip-text" translatable="yes">New tab (Ctrl+T)</property>
                   </object>
                 </child>
               </object>
