menus: expose "Find" (ctrl+f) instead of Replace
Fixes #62

--- a/src/menus.ui
+++ b/src/menus.ui
@@ -28,8 +28,8 @@
     <section>
       <item>
         <attribute name="label" translatable="yes">_Find/Replace…</attribute>
-        <attribute name="action">page.begin-replace</attribute>
-        <attribute name="accel">&lt;primary&gt;h</attribute>
+        <attribute name="action">page.begin-search</attribute>
+        <attribute name="accel">&lt;primary&gt;f</attribute>
       </item>
     </section>
     <section>
