preferences: add toggle for overview map
Fixes #87

--- a/src/editor-preferences-window.ui
+++ b/src/editor-preferences-window.ui
@@ -45,6 +45,12 @@
                 <property name="schema-key">show-grid</property>
               </object>
             </child>
+            <child>
+              <object class="EditorPreferencesSwitch" id="map">
+                <property name="title" translatable="yes">Display Overview Map</property>
+                <property name="schema-key">show-map</property>
+              </object>
+            </child>
           </object>
         </child>
       </object>
